@startuml
'https://plantuml.com/class-diagram


interface IReceiver
class Email1
class Telephone1
class Person1

IReceiver <|.. Email1
IReceiver <|.. Telephone1
Person1 *-- IReceiver

class Person1 {
    void receive(IReceiver)
}

interface IReceiver {
    String execReceive()
}

class Email1 {
    String execReceive()
}

class Telephone1 {
    String execReceive()
}


@enduml